# no-time4real

./: .gitignore
project/: .driver_interruption.ko.cmd  .driver_interruption.mod.cmd  .driver_interruption.mod.o.cmd  .driver_interruption.o.cmd  Makefile  Makefile~  README.md  UML_TR.drawio  driver_interruption.c  driver_interruption.ko  driver_interruption.mod  driver_interruption.mod.c  lidar  lidar.c  lidar.cpp  main  main.cpp  modules.order  test.cpp  uml1.uxf
project/include/: #Moteur.hpp#  .#Moteur.hpp  .#Servo.hpp  Camera.h  Camera.hpp  Camera.hpp~  Capteur.h  Capteur.hpp  Encoder.h  Moteur.h  Moteur.hpp~  Motor.h  Servo.h  Servo.hpp~  camera.hpp  camera.hpp~  capteur.hpp  encodeur.hpp  lidar.hpp  moteur.hpp  pantilt.hpp  servo.hpp
project/src/: #Encoder.cpp#  .#Motor.cpp  Camera.c  Camera.cpp  Camera.cpp~  Capteur.c  Capteur.cpp  Capteur.cpp~  Encoder.cpp  Grove_Motor_Driver_TB6612FNG.cpp  I2Cdev.cpp  Moteur.cpp  Moteur.cpp~  Motor (copie).cpp~  Motor.cpp  Servo.c  Servo.cpp  camera.cpp  capteur.cpp  driver_interruption.c  encodeur.cpp  lidar.cpp  moteur.cpp  pantilt.cpp  servo.cpp
project/unitaries_test/: ic2.c  ic2_ancien.c  lidar.cpp~  makefile  test
tp/TR_ROB5-chaimi-duarte/: README.md
tp/tp3/: TR_ROB5-chaimi-duarte.tar.xz
tp/tp3/TR_ROB5-chaimi-duarte/MyTask/: CMakeLists.txt  package.xml
tp/tp3/TR_ROB5-chaimi-duarte/MyTask/src/: CMakeLists.txt  MyTask-component.cpp  MyTask-component.cpp~  MyTask-component.hpp  MyTask-component.hpp~  MyTask-controller.cpp  MyTask-controller.cpp~  MyTask-controller.hpp  MyTask-controller.hpp~  start.ops  startC.ops
(+45 files in other folders)
