<package>
  <name>MyTask</name>
  <version>1.0.0</version>
  <description>This package contains the components of the MyTask package</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>Unknown</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Unknown Author</author>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>orogen</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ocl</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>orogen</build_depend>
  <build_depend>ocl</build_depend>

  <export>

  </export>
</package>
